--- a/sentinel/docker-compose.yaml
+++ b/sentinel/docker-compose.yaml
@@ -148,7 +148,7 @@ services:
     restart: unless-stopped
 
   # Go Application
-  express-app:
+  go-app:
     build:
       context: ./app
       dockerfile: Dockerfile
