--- a/cluster/docker-compose.yaml
+++ b/cluster/docker-compose.yaml
@@ -167,7 +167,7 @@ services:
     restart: unless-stopped
 
   # Go Application
-  express-app:
+  go-app:
     build:
       context: ./app
       dockerfile: Dockerfile
